welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:6: error: value prendBiscuit is not a member of Unit
possible cause: maybe a semicolon is missing before `value prendBiscuit'?
  } prendBiscuit()
    ^Methods:7: error: not found: value nbPas
  for (c <- 1 to nbPas)
                 ^